# Anki-Dictionary-Addon

./: .flake8  .gitignore  .releaserc.json  CICD_README.md  EXTRACTION_SUMMARY.md  MIGRATION_PROGRESS.md  README.md  README_REFACTORED.md  README_RUN_WITHOUT_ANKI.md  README_STANDALONE.md  REFACTORING_SUMMARY.md  REORGANIZATION_PLAN.md  __init__.py  build.py  config.json  create_demo_data.py  debug_test.py  demo.py  demo_refactored.py  demo_simplified.py  dev.py  dictdb.py  dictionaries.sqlite  dictionaryInit.html  dictionaryManager.py  dictionaryWebInstallWizard.py  duckduckgoimages.py  external_launcher.py  extract_core_features.py  import_patcher.py  launch_dictionary.py  launch_dictionary_fixed.py  launch_dictionary_ultimate.py  main.py  midict.py  package_launcher.py  pyproject.toml  requirements_addon.txt  requirements_dev.txt  requirements_simplified.txt  (+14 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ci-cd-issue.md
.github/workflows/: auto-release.yml  ci-cd.yml  integration-test.yml  release.yml  semantic-release.yml  test.yml
core/: __init__.py  database.py  dictionary.py  image_search.py
docs/: REORGANIZATION_GUIDE.md
scripts/: create_default_themes.py  create_empty_db.py  release.py  update_version.py
standalone/: __init__.py  demo.py  external_launcher.py  launcher.py
tests/: __init__.py  run_tests.py  test_addon_structure.py  test_ci.py  test_config_manager.py  test_database.py  test_dependency_checker.py  test_dictionary.py  test_dictionary_launcher.py  test_image_providers.py  test_image_search.py  test_integration.py  test_minimal_anki_environment.py  test_simple_functionality.py
(+45 files in other folders)
