[project]
name = "anki-dictionary-addon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
]

[tool.pyright]
include = ["src"]
exclude = ["**/venv", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

